--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
   l = log --graph --decorate --pretty=oneline --abbrev-commit
   la = log --graph --decorate --pretty=oneline --abbrev-commit --all --date=local
   ign = ls-files -o -i --exclude-standard
+  set-upstream = !git branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
 
 [core]
   pager = less -x4
