--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,6 @@
 [alias]
   st = status
+  ss = status -s
   co = checkout
   ci = commit
   lol = log --graph --decorate --pretty=oneline --abbrev-commit
@@ -8,7 +9,8 @@
   la = log --graph --decorate --pretty=oneline --abbrev-commit --all --date=local
   ign = ls-files -o -i --exclude-standard
   set-upstream = !git branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
-
+  lf = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
+  ltag = describe --tags --abbrev=0
 [core]
   pager = less -x4
   editor = /usr/bin/vim
