--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,7 @@
   set-upstream = !git branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
   lf = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
   ltag = describe --tags --abbrev=0
+  lt = git log --tags --simplify-by-decoration
 [core]
   pager = less -x4
   editor = /usr/bin/vim
