--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,9 @@
   ss = status -s
   co = checkout
   ci = commit
+  ca = commit --amend
+  wip = commit -m "WIPWIPWIPWIPWIPWIPWIPWIP"
+  wipa = commit -am "WIPWIPWIPWIPWIPWIPWIPWIP"
   lol = log --graph --decorate --pretty=oneline --abbrev-commit
   lola = log --graph --decorate --pretty=oneline --abbrev-commit --all --date=local
   l = log --graph --decorate --pretty=oneline --abbrev-commit
