--- a/.gitconfig
+++ b/.gitconfig
@@ -7,7 +7,7 @@
   ss = status -s
   co = checkout
   ci = commit
-  ca = commit --amend
+  amend = commit --amend
   wip = commit -m "WIPWIPWIPWIPWIPWIPWIPWIP"
   wipa = commit -am "WIPWIPWIPWIPWIPWIPWIPWIP"
   lol = log --graph --decorate --pretty=oneline --abbrev-commit
