--- a/.gitconfig
+++ b/.gitconfig
@@ -13,8 +13,8 @@
   ui = true
   pager = true
 [user]
-  email = kalev@bytelife.com
-  name = kalev
+	email = kalev@bytelife.ee
+	name = kalev kuusik
 [alias]
   dif = diff
   dc = diff --cached
@@ -48,3 +48,16 @@
   enabled = true
 [remote "origin"]
   prune = true
+[difftool "sourcetree"]
+	cmd = /Applications/DiffMerge.app/Contents/MacOS/DiffMerge/Contents/MacOS/DiffMerge --nosplash \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/p4merge.app/Contents/MacOS/p4merge \"$BASE\" \"$LOCAL\" \"$REMOTE\" \"$MERGED\"
+	trustExitCode = true
+[commit]
+	template = /Users/kalev/.stCommitMsg
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
