added option to use alternative git repo for install_from_web.sh

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,7 @@
 	excludesfile = /Users/kalev/.gitignore_global
   autocrlf = input
 [push]
+  autoSetupRemote = true
   default = simple
 [color]
   diff = auto
